bk_ida/gccida/c2/print_exp
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/print_exp/src/sched-vis.c:655:14: error: expected ';' at end of declaration
void *__ptr32 *v9; // rcx 
             ^
             ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/print_exp/src/sched-vis.c:675:7: error: redefinition of '__ptr32'
void *__ptr32 *v29; // rcx 
      ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/print_exp/src/sched-vis.c:655:7: note: previous definition is here
void *__ptr32 *v9; // rcx 
      ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/print_exp/src/sched-vis.c:675:14: error: expected ';' at end of declaration
void *__ptr32 *v29; // rcx 
             ^
             ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/print_exp/src/sched-vis.c:699:12: error: expected expression
*( _OWORD *)v45 = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/print_exp/src/sched-vis.c:699:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)v45 = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/print_exp/src/sched-vis.c:798:14: error: use of undeclared identifier 'off_6474F4'
sprintf( s, &off_6474F4[1], *( _DWORD *)&x[1]); 
             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/print_exp/src/sched-vis.c:842:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v45[1] = ( rtx)x[1]; 
               ^~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/print_exp/src/sched-vis.c:859:15: error: use of undeclared identifier 'off_6F024B'
v5 = ( char *)off_6F024B; 
              ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/print_exp/src/sched-vis.c:863:26: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v6 = (  struct rtx_def *)x[1]; 
                         ^~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/print_exp/src/sched-vis.c:928:28: error: use of undeclared identifier 'unk_710228'
*( ( _QWORD *)&v47 + 1) = &unk_710228; 
                           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/print_exp/src/sched-vis.c:984:16: error: use of undeclared identifier 'off_6F2CB0'
v5 = ( char *)&off_6F2CB0; 
               ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/print_exp/src/sched-vis.c:988:16: error: use of undeclared identifier 'off_6F2C9E'
v5 = ( char *)&off_6F2C9E; 
               ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/print_exp/src/sched-vis.c:992:19: error: use of undeclared identifier 'off_6F2CB0'
v5 = ( _BYTE *)( &off_6F2CB0 + 5); 
                  ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/print_exp/src/sched-vis.c:996:16: error: use of undeclared identifier 'off_6F2CA7'
v5 = ( char *)&off_6F2CA7; 
               ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/print_exp/src/sched-vis.c:1000:1: error: use of undeclared identifier 'v9'
v9 = &off_710234; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/print_exp/src/sched-vis.c:1000:7: error: use of undeclared identifier 'off_710234'
v9 = &off_710234; 
      ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/print_exp/src/sched-vis.c:1005:1: error: use of undeclared identifier 'v9'
v9 = &off_710238; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/print_exp/src/sched-vis.c:1005:7: error: use of undeclared identifier 'off_710238'
v9 = &off_710238; 
      ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/print_exp/src/sched-vis.c:1010:1: error: use of undeclared identifier 'v9'
v9 = &off_710240; 
^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/print_exp/src/obj/sched-vis.o] Error 1
